Implemented job application management

--- a/WebApps/AngularSPA/Client/src/app/containers/home/home.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-grow-1 m-4">
-    <p-tieredMenu [model]="items | async"></p-tieredMenu>
+    <p-tieredMenu [model]="items | async" [baseZIndex]="100"></p-tieredMenu>
     <router-outlet></router-outlet>
 </div>
 
