--- a/WebApps/AngularSPA/Client/src/app/personnel/components/job-application-form/job-application-form.component.html
+++ b/WebApps/AngularSPA/Client/src/app/personnel/components/job-application-form/job-application-form.component.html
@@ -3,17 +3,25 @@
     <div class="col-auto">Please upload your resume (PDF files only)</div>
   </div>
   <div class="row">
-    <div class="col-12">
-      <p-fileUpload mode="basic" auto="auto" [customUpload]="true" (uploadHandler)="onUpload($event)" accept="application/pdf" maxFileSize="1000000" uploadLabel="Select Resume">
+    <div class="col-4">
+      <p-fileUpload 
+        mode="basic" 
+        auto="auto" 
+        [customUpload]="true" 
+        (uploadHandler)="onUpload($event)" 
+        accept="application/pdf" 
+        maxFileSize="1000000" 
+        uploadLabel="Select Resume">
       </p-fileUpload>
     </div>
+    <div *ngIf="uploadedFiles[0]" class="col">{{uploadedFiles[0].name}}</div>
   </div>
   <div class="row mt-4">
     <div class="col-auto mr-auto">
       <button pButton type="button" label="Return" (click)="onReturn()"></button>
     </div>
     <div class="col-auto">
-      <button pButton type="button" label="Submit" (click)="onSubmit()"></button>
+      <button pButton type="button" label="Submit" (click)="onSubmit()" [disabled]="uploadedFiles.length == 0"></button>
     </div>
   </div>
 </div>
