--- a/WebApps/AngularSPA/Client/src/app/personnel/containers/my-job-applications/my-job-applications.component.html
+++ b/WebApps/AngularSPA/Client/src/app/personnel/containers/my-job-applications/my-job-applications.component.html
@@ -1,1 +1,5 @@
-<app-job-applications-result [jobApplications]="myJobApplications$ | async" (openResume)="onOpenResume($event)" (action)="onAction($event)" [canHire]="false"></app-job-applications-result>
+<div class="container-fluid">
+    <div class="row">
+        <app-job-applications-result [jobApplications]="myJobApplications$ | async" (openResume)="onOpenResume($event)" (action)="onAction($event)" [canHire]="false" class="col-12"></app-job-applications-result>
+    </div>
+</div>
