--- a/WebApps/AngularSPA/Client/src/app/personnel/containers/job-posting/job-posting.component.html
+++ b/WebApps/AngularSPA/Client/src/app/personnel/containers/job-posting/job-posting.component.html
@@ -8,7 +8,7 @@
           </tr>
           <tr>
             <th scope="row">Job Title</th>
-            <td>{{(jobPosting$ | async).jobTitleName}}</td>
+            <td>{{(jobPosting$ | async).jobTitle}}</td>
           </tr>
           <tr>
               <th scope="row">Posted date</th>
