--- a/WebApps/AngularSPA/Client/src/app/personnel/components/job-search-result/job-search-result.component.html
+++ b/WebApps/AngularSPA/Client/src/app/personnel/components/job-search-result/job-search-result.component.html
@@ -10,7 +10,7 @@
       <tr>
           <td>{{posting.id}}</td>
           <td>
-            <a [routerLink]="['posting', posting.id]">{{posting.jobTitle}}</a>
+            <a [routerLink]="['/personnel/employment/job-posting', posting.id]">{{posting.jobTitle}}</a>
           </td>
           <td>{{posting.postedTime}}</td>
       </tr>
