Fixed a few bugs

--- a/WebApps/AngularSPA/Client/src/app/personnel/components/job-applications-result/job-applications-result.component.html
+++ b/WebApps/AngularSPA/Client/src/app/personnel/components/job-applications-result/job-applications-result.component.html
@@ -7,6 +7,7 @@
                     <th>Date Submitted</th>
                     <th>Job Posting</th>
                     <th>Resume</th>
+                    <th>Decision</th>
                     <th>Actions</th>
                 </tr>
             </ng-template>
@@ -16,8 +17,11 @@
                     <td>{{application.time}}</td>
                     <td><a [routerLink]="['/personnel/employment/job-posting', application.jobPosting]">{{getJobTitleByPostingId(application.jobPosting)}}</a></td>
                     <td><a href="javascript:void(0)" (click)="onOpenResume(application.id)">Click To Open</a></td>
+                    <td>{{application.decision ? application.decision.decision + 'd' : 'Pending'}}</td>
                     <td>
-                        <a href="javascript:void(0)" (click)="onAction(action.action, application.id)" *ngFor="let action of actions" class="pl-2 pr-2">{{action.label}}</a>
+                        <div *ngIf="!application.decision">
+                            <a href="javascript:void(0)" (click)="onAction(action.action, application.id)" *ngFor="let action of actions" class="pl-2 pr-2">{{action.label}}</a>
+                        </div>
                     </td>
                 </tr>
             </ng-template>
